package es.us.dp1.l4_04_24_25.saboteur.action;

public enum nameAction {

    REPAIR,
    DESTROY,
    OVERTHROW,
    REVEAL
    
}
