package es.us.dp1.l4_04_24_25.saboteur.card;

public enum effectValue {

    REPAIR_PICKAXE,
    REPAIR_CART,
    REPAIR_LAMP,
    DESTROY_PICKAXE,
    DESTROY_CART,
    DESTROY_LAMP,
    REPAIR_PICKAXE_CART,
    REPAIR_PICKAXE_LAMP,
    REPAIR_CART_LAMP,
    DESTROY_TUNNEL,
    REVEAL
    
}
