package es.us.dp1.l4_04_24_25.saboteur.game;

public enum gameStatus {
    CREATED,
    ONGOING,
    FINISHED
}
