@startuml Diagrama de diseño

' Mejoras de visualización: valores moderados para evitar recortes/solapamientos
skinparam dpi 150
skinparam nodesep 220
skinparam ranksep 120
skinparam padding 20
skinparam classCardPadding 10
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam shadowing false
skinparam ArrowColor #333333
skinparam ArrowFontSize 12
skinparam classFontSize 12
skinparam classAttributeFontSize 10
skinparam defaultTextAlignment left
'left to right direction'


class BaseEntity {
  id: Integer
}

class NamedEntity extends BaseEntity {
  name: String
}


class User extends BaseEntity {
  username: String
  name: String
  birthDate: String
  joined: LocalDateTime
  password: String
  image: String
  email: String
}

class Authorities extends BaseEntity {
  authority: String
}

class Player extends User {
  playedGames: Integer
  wonGames: Integer
  destroyedPaths: Integer
  builtPaths: Integer
  acquiredGoldNuggets: Integer
  peopleDamaged: Integer
  peopleRepaired: Integer
  isWatcher: boolean
}

class ActivePlayer extends Player {
  rol: boolean
  goldNugget: Integer
  pickaxeState: boolean
  candleState: boolean
  cartState: boolean
}

class Request extends BaseEntity {
  status: RequestStatus
}

enum RequestStatus {
  PENDING
  APPROVED
  REJECTED
}



class Game extends BaseEntity {
  time: Duration
  gameStatus: GameStatus
  isPrivate: boolean
  maxPlayers: Integer
  createdAt: LocalDateTime
  startTime: LocalDateTime
}

enum GameStatus {
  CREATED
  ONGOING
  FINISHED
}

class Round extends BaseEntity {
  timeSpent: Duration
  leftCards: Integer
  winnerRol: Boolean
  turn: Integer
  roundNumber: Integer
}

class Log extends BaseEntity {
  messages: List
}

class Board extends BaseEntity {
  base: Integer
  height: Integer
  objectiveCardsOrder: String
}

class Square extends BaseEntity {
  coordinateX: Integer
  coordinateY: Integer
  occupation: boolean
  type: SquareType
  goalType: GoalType
}

enum SquareType {
  PATH
  GOAL
  START
}

enum GoalType {
  GOLD
  CARBON_1
  CARBON_2
}


class Card extends BaseEntity {
  status: boolean
  image: String
}

class Tunnel extends Card {
  rotacion: boolean
  arriba: boolean
  abajo: boolean
  derecha: boolean
  izquierda: boolean
  centro: boolean
}

class Action extends Card {
  nameAction: NameAction
  effectValue: EffectValue
  objectAffect: boolean
}

enum NameAction {
  REPAIR
  DESTROY
  OVERTHROW
  REVEAL
}

enum EffectValue {
  REPAIR_PICKAXE
  REPAIR_CART
  REPAIR_LAMP
  DESTROY_PICKAXE
  DESTROY_CART
  DESTROY_LAMP
  REPAIR_PICKAXE_CART
  REPAIR_PICKAXE_LAMP
  REPAIR_CART_LAMP
  DESTROY_TUNNEL
  REVEAL
}

class Deck extends BaseEntity {
}


class Chat extends BaseEntity {
}

class Message extends BaseEntity {
  content: String
}


class Achievement extends BaseEntity {
  tittle: String
  description: String
  badgeImage: String
  threshold: Integer
  metric: Metric
}

enum Metric {
  GAMES_PLAYED
  VICTORIES
  BUILT_PATHS
  DESTROYED_PATHS
  GOLD_NUGGETS
  TOOLS_DAMAGED
  TOOLS_REPAIRED
}


User "0..*" -- "1" Authorities : authority

Player "    0..*" -- "0..*" Player : friends
Player "0..*" -- "0..*" Achievement : accquiredAchievements
Player "  0..*" -- "0..1" Game : watchers

Player "    1" -down- "0..*" Request : sentRequests
Player "1" -- "0..*" Request : receivedRequests

ActivePlayer "1" -- "0..1" Deck : deck
ActivePlayer "1" -- "0..*" Message : messages
ActivePlayer "1" -up- "0..*" Game : wonGames
ActivePlayer "1" -right- "0..*" Game : createdGames

Game "1" *-- "0..3" Round : rounds
Game "1" *-- "0..1" Chat : chat
Game "0..*" -up- "0..1" ActivePlayer : winner
Game "0..*" -up- "1" ActivePlayer : creator
Game "0..*" -right- "0..*" ActivePlayer : activePlayers

Round "1" -right- "0..1" Board : board
Round "1" -- "0..1" ActivePlayer : playerTurn
Round "1" -down- "0..1" Log : log

Board "1" *-- "0..*" Square : busy
Square "0..*" -- "0..1" Card : card

Chat "1" *-- "0..*" Message : messages

Deck "1" -- "0..*" Card : cards

User "1" -up- "0..*" Achievement : createdAchievements
Achievement "0..*" -left- "0..*" Player : players

@enduml